--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                         <details>
                             <summary>
                                 <div class="job-header">
-                                    <span class="job-title">Assistant Product Manager</span>
+                                    <span class="job-title">Product Pod Member / Intern</span>
                                     <span class="job-company">Libra Private Limited</span>
                                     <span class="job-date">Jan 2014 - Jun 2015</span>
                                 </div>
