--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         /* --- SECTION BANNERS (CHICAGO THEME) --- */
         .section-banner {
-            height: 280px; /* Compact but impactful */
+            height: 280px; 
             background-attachment: fixed; /* Parallax */
             background-position: center;
             background-size: cover;
@@ -92,13 +92,9 @@
         }
 
         /* CHICAGO IMAGES (Open Source Unsplash) */
-        /* Journey: Cloud Gate (The Bean) - Reflection/Self */
         .bg-journey { background-image: url('https://images.unsplash.com/photo-1494522855154-9297ac14b55f?auto=format&fit=crop&q=80'); }
-        /* Experience: Marina City/River - Structure/Work */
         .bg-experience { background-image: url('https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?auto=format&fit=crop&q=80'); }
-        /* Research: Chicago Theatre - Public/Broadcast */
         .bg-research { background-image: url('https://images.unsplash.com/photo-1596727282245-2b0222043d94?auto=format&fit=crop&q=80'); }
-        /* Affiliations: The L Train - Connection/Network */
         .bg-affiliations { background-image: url('https://images.unsplash.com/photo-1596250410216-947c7c16525b?auto=format&fit=crop&q=80'); }
 
         /* --- NAVIGATION --- */
@@ -439,6 +435,9 @@
         <div class="contact-icons">
             <a href="mailto:skhan24@nd.edu" class="icon-link" title="Email Me">
                 <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://linkedin.com/in/mamoor-ali-khan-5106a9171/?skipRedirect=true" target="_blank" class="icon-link" title="LinkedIn">
+                <i class="fab fa-linkedin"></i>
             </a>
             <a href="https://www.dropbox.com/scl/fi/eomamml30qifisjtle7t8/resume_mamooralikhan.pdf?rlkey=h5bfp0ajxb5no1432zzivfng6&dl=0" target="_blank" class="icon-link" title="Download CV">
                 <i class="fas fa-file-alt"></i>
