--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 
     <div id="research" class="section-banner bg-research">
         <div class="banner-overlay">
-            <h2 class="banner-title">Research Operations & Implementation Portfolio</h2>
+            <h2 class="banner-title">Research Operations</h2>
         </div>
     </div>
 
@@ -636,7 +636,7 @@
         <div style="background-color: #fff; border: 1px solid var(--accent-navy); padding: 20px; margin-bottom: 40px; text-align: center;">
             <p style="margin: 0; font-size: 0.9rem; color: var(--accent-navy); font-style: italic;">
                 <i class="fas fa-info-circle" style="margin-right: 8px;"></i>
-                <strong>Portfolio Statement:</strong> The projects listed below span nearly a decade of my work in research operations. While I am not an author on these publications, I had the privilege of supporting these studies by managing data collection, supervising field teams, and helping maintain critical stakeholder relationships.
+                <strong>Portfolio Statement:</strong> This portfolio spans nearly a decade of technical execution and operational leadership. While I do not claim authorship, I served as the technical backbone for these studies—driving rigorous data cleaning, coding in R, and statistical analysis alongside the management of complex field operations and stakeholder relationships.
             </p>
         </div>
 
@@ -646,7 +646,7 @@
                     Role: Policy Design & Visualization
                 </h3>
                 <p style="color: var(--text-charcoal); font-size: 0.95rem; line-height: 1.5; margin: 0;">
-                    <strong>Operational Focus:</strong> Translating complex policy needs into actionable visual strategies. Responsible for creating high-level "guiding light" documents and illustrations for government application.
+                    <strong>Operational Focus:</strong> Translating complex policy needs into actionable visual strategies. Responsible for conceptualizing and creating high-level "guiding light" frameworks for government application.
                 </p>
             </div>
             
@@ -677,7 +677,7 @@
                     Role: Project Director
                 </h3>
                 <p style="color: var(--text-charcoal); font-size: 0.95rem; line-height: 1.5; margin: 0;">
-                    <strong>Operational Focus:</strong> In charge of end-to-end research operations. Responsibilities included developing survey tools, supervising large-scale data collection, ensuring strict data delivery protocols, and performing preliminary statistical analysis and cleaning.
+                    <strong>Technical & Operational Focus:</strong> Directed end-to-end research cycles. Responsibilities included developing survey instruments, supervising large-scale data collection, and executing rigorous data cleaning and preliminary statistical analysis using R.
                 </p>
             </div>
 
@@ -736,7 +736,7 @@
                     Role: Country Project Manager (Pakistan)
                 </h3>
                 <p style="color: var(--text-charcoal); font-size: 0.95rem; line-height: 1.5; margin: 0;">
-                    <strong>Operational Focus:</strong> Managing the Pakistan arm of multi-country projects. Specifically responsible for executing complex legislator data collection and high-level stakeholder management.
+                    <strong>Operational Focus:</strong> Managed the Pakistan arm of multi-country projects. Specifically responsible for executing complex legislator data collection, ensuring data integrity, and high-level stakeholder management.
                 </p>
             </div>
 
@@ -777,7 +777,7 @@
                     Role: Research Support & Data Analysis
                 </h3>
                 <p style="color: var(--text-charcoal); font-size: 0.95rem; line-height: 1.5; margin: 0;">
-                    <strong>Operational Focus:</strong> Provided technical execution including R coding, data cleaning, web scraping, and database management. Coordinated high-level field activities, including MP workshops and governance conferences.
+                    <strong>Technical Focus:</strong> Provided key technical execution including advanced R coding, large-scale data cleaning, web scraping, and database management. Coordinated high-level field activities, including MP workshops and governance conferences.
                 </p>
             </div>
 
