--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             font-family: 'Merriweather', serif; 
             line-height: 1.7; 
             scroll-behavior: smooth;
-            font-size: 14px; /* SMALL BASE FONT */
+            font-size: 15.5px; /* INCREASED SLIGHTLY */
         }
 
         h1, h2, h3, h4 {
@@ -54,10 +54,10 @@
             width: 100%;
             background-color: rgba(249, 248, 244, 0.98);
             border-bottom: 1px solid var(--accent-gold);
-            padding: 10px 0;
+            padding: 12px 0;
             z-index: 1000;
             text-align: center;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
         }
 
         .nav-links {
@@ -66,66 +66,62 @@
             margin: 0;
             display: flex;
             justify-content: center;
-            gap: 30px;
+            gap: 35px;
         }
 
         .nav-links a {
             font-family: 'Playfair Display', serif;
-            font-size: 0.75rem; 
+            font-size: 0.85rem;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
             color: var(--text-ink);
             border-bottom: none;
             font-weight: 700;
         }
         .nav-links a:hover { color: var(--accent-gold); }
 
-        /* --- SPLIT HERO SECTION (Bio + Journey) --- */
+        /* --- SPLIT HERO SECTION (Standard Flow) --- */
         .hero-split-container {
             display: grid;
-            grid-template-columns: 280px 1fr; /* Sidebar width / Content width */
-            gap: 50px;
+            grid-template-columns: 280px 1fr; 
+            gap: 60px;
             max-width: 1000px;
             margin: 0 auto;
-            padding: 60px 20px;
+            padding: 80px 20px;
             align-items: start;
-            /* CRITICAL FIX: Ensures this section has a background and sits ON TOP of banners */
-            background-color: var(--bg-paper); 
-            position: relative;
-            z-index: 10;
+            background-color: var(--bg-paper);
         }
 
         /* LEFT COL: BIO (Sticky Sidebar) */
         .hero-bio-col {
             text-align: center;
             position: sticky;
-            top: 80px; 
-            background-color: var(--bg-paper); /* Ensures solid bg */
+            top: 100px; 
         }
 
         .profile-pic {
-            width: 140px; 
-            height: 140px;
+            width: 150px; 
+            height: 150px;
             border-radius: 50%;
             object-fit: cover;
             border: 3px solid #fff;
             box-shadow: 0 0 0 1px var(--accent-gold);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .hero-name {
-            font-size: 2.0rem; 
-            margin-bottom: 5px;
+            font-size: 2.2rem; 
+            margin-bottom: 10px;
             color: var(--accent-navy);
-            line-height: 1.1;
+            line-height: 1.2;
         }
 
         .hero-title {
             font-family: 'Merriweather', serif;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             color: var(--text-charcoal);
             font-style: italic;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
@@ -133,21 +129,21 @@
         .contact-icons {
             display: flex;
             justify-content: center;
-            gap: 15px;
-            margin-bottom: 20px;
+            gap: 20px;
+            margin-bottom: 25px;
         }
 
         .icon-link {
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             color: var(--text-charcoal);
             transition: all 0.3s ease;
             border-bottom: none !important;
         }
         .icon-link:hover { color: var(--accent-gold); transform: translateY(-3px); }
 
-        /* TINY INSTAGRAM NOTE (Sidebar) */
+        /* TINY INSTAGRAM NOTE */
         .insta-note {
-            font-size: 0.75rem;
+            font-size: 0.8rem;
             color: #888;
             font-style: italic;
             margin-top: 20px;
@@ -158,99 +154,98 @@
         .insta-note a { color: #555; border-bottom: 1px dotted #ccc; }
         .insta-note a:hover { color: #C13584; border-bottom: 1px solid #C13584; }
 
-        /* RIGHT COL: JOURNEY & MENTORS */
+        /* RIGHT COL: JOURNEY */
         .hero-journey-col {
             padding-top: 5px;
         }
 
         .journey-heading {
             font-family: 'Playfair Display', serif;
-            font-size: 1.4rem; 
+            font-size: 1.6rem; 
             color: var(--accent-gold);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             border-bottom: 1px solid var(--border-line);
-            padding-bottom: 5px;
+            padding-bottom: 10px;
             display: block;
         }
 
         .journey-columns {
             column-count: 2;
-            column-gap: 30px;
+            column-gap: 40px;
             column-rule: 1px solid #e0e0e0;
             text-align: justify;
-            margin-bottom: 40px;
+            margin-bottom: 50px;
         }
         
         .journey-columns p {
-            font-size: 0.9rem; /* Small dense text */
+            font-size: 1rem; /* Slightly larger reading text */
             line-height: 1.7;
             color: var(--text-charcoal);
             margin-top: 0;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
-        /* MENTORS GRID (Bottom of Journey) */
+        /* MENTORS GRID */
         .mentors-section {
             border-top: 1px solid var(--border-line);
-            padding-top: 25px;
+            padding-top: 30px;
         }
         .mentors-title {
             font-family: 'Montserrat', sans-serif;
-            font-size: 0.75rem;
+            font-size: 0.85rem;
             text-transform: uppercase;
             letter-spacing: 1.5px;
             color: var(--accent-navy);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             font-weight: 700;
         }
         .mentors-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 25px;
+            gap: 30px;
         }
         .mentor-card {
             background: #fff;
             border: 1px solid var(--border-line);
-            padding: 15px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.01);
+            padding: 20px;
+            /* Removed shadow for flat look */
         }
         .mentor-link {
-            font-size: 0.95rem;
+            font-size: 1.1rem;
             color: var(--accent-navy);
-            margin: 0 0 8px 0;
+            margin: 0 0 10px 0;
             display: inline-block;
             border-bottom: 1px solid var(--accent-gold);
-            padding-bottom: 1px;
+            padding-bottom: 2px;
             font-family: 'Playfair Display', serif;
             font-weight: 700;
         }
         .mentor-card p {
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             margin: 0;
-            line-height: 1.5;
+            line-height: 1.6;
             color: var(--text-charcoal);
             font-style: italic;
         }
 
-        /* --- STICKY BANNERS (The Curtain Effect) --- */
+        /* --- STANDARD BANNERS (NO STICKY/NO 3D) --- */
         .section-banner {
-            position: sticky;
-            top: 0;
-            height: 220px; 
+            position: relative; /* Normal flow */
+            height: 280px; 
             display: flex;
             align-items: center;
             justify-content: center;
-            z-index: 0; /* Behind content */
             background-size: cover;
             background-position: center;
+            margin-bottom: 0; 
         }
         .banner-overlay {
             background: rgba(10, 10, 15, 0.4); 
             width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;
         }
         .banner-title {
-            color: #fff; font-size: 1.6rem; letter-spacing: 2px; text-transform: uppercase;
-            border: 1px solid rgba(255,255,255,0.7); padding: 10px 30px;
+            color: #fff; font-size: 2rem; letter-spacing: 3px; text-transform: uppercase;
+            border: 1px solid rgba(255,255,255,0.7); padding: 15px 40px;
             background: rgba(0,0,0,0.5); backdrop-filter: blur(4px); text-align: center;
         }
         
@@ -258,51 +253,48 @@
         .bg-research { background-image: url('images/research.jpg'); }
         .bg-affiliations { background-image: url('images/affiliations.jpg'); }
 
-        /* --- CONTAINER UTILS (For sections below) --- */
+        /* --- CONTAINER UTILS --- */
         .container {
             max-width: 900px;
             margin: 0 auto;
-            padding: 50px 20px;
-            /* CRITICAL FIX: Ensures text sections cover the banner */
+            padding: 80px 20px;
             background-color: var(--bg-paper); 
-            position: relative;
-            z-index: 10; 
-            box-shadow: 0 -10px 30px rgba(0,0,0,0.05);
+            /* Removed z-index and shadows for flat look */
         }
 
         /* --- TIMELINE STYLES --- */
-        .timeline-container { position: relative; padding-left: 25px; }
+        .timeline-container { position: relative; padding-left: 30px; }
         .timeline-container::before { content: ''; position: absolute; left: 6px; top: 10px; bottom: 20px; width: 1px; background: var(--border-line); }
-        .timeline-series-item { position: relative; margin-bottom: 12px; }
+        .timeline-series-item { position: relative; margin-bottom: 15px; }
         .timeline-series-item::after { content: ''; position: absolute; left: -28px; top: 18px; width: 8px; height: 8px; border-radius: 50%; background: #fff; border: 2px solid var(--accent-gold); z-index: 2; }
         .series-card { background: #fff; border: 1px solid var(--border-line); border-radius: 3px; overflow: hidden; transition: all 0.3s ease; }
         .series-card:hover { border-color: var(--accent-gold); box-shadow: 0 4px 10px rgba(0,0,0,0.03); }
-        summary { list-style: none; padding: 12px 18px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; background: #fff; }
+        summary { list-style: none; padding: 15px 20px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; background: #fff; }
         summary::-webkit-details-marker { display: none; }
         .series-header { display: flex; align-items: center; width: 100%; gap: 15px; }
-        .series-date { font-family: 'Montserrat', sans-serif; font-size: 0.75rem; color: var(--text-charcoal); width: 120px; flex-shrink: 0; font-weight: 600; }
+        .series-date { font-family: 'Montserrat', sans-serif; font-size: 0.8rem; color: var(--text-charcoal); width: 130px; flex-shrink: 0; font-weight: 600; }
         .series-info { display: flex; flex-direction: column; }
-        .series-title { font-family: 'Playfair Display', serif; font-size: 1rem; color: var(--text-ink); font-weight: 700; }
-        .series-company { font-family: 'Montserrat', sans-serif; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1px; color: var(--accent-gold); }
-        .arrow-icon { color: var(--text-charcoal); font-size: 0.8rem; transition: transform 0.3s ease; }
+        .series-title { font-family: 'Playfair Display', serif; font-size: 1.1rem; color: var(--text-ink); font-weight: 700; }
+        .series-company { font-family: 'Montserrat', sans-serif; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; color: var(--accent-gold); }
+        .arrow-icon { color: var(--text-charcoal); font-size: 0.9rem; transition: transform 0.3s ease; }
         details[open] summary .arrow-icon { transform: rotate(180deg); color: var(--accent-gold); }
-        .series-content { padding: 0 18px 18px 153px; border-top: 1px solid #f0f0f0; color: var(--text-charcoal); font-size: 0.85rem; line-height: 1.6; background: #fafafa; padding-top: 12px; }
+        .series-content { padding: 0 20px 20px 165px; border-top: 1px solid #f0f0f0; color: var(--text-charcoal); font-size: 0.95rem; line-height: 1.6; background: #fafafa; padding-top: 15px; }
 
         /* --- RESEARCH STYLES --- */
-        .research-category-title { font-family: 'Montserrat', sans-serif; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 2px; color: var(--accent-gold); border-bottom: 2px solid var(--border-line); padding-bottom: 8px; margin-bottom: 25px; }
+        .research-category-title { font-family: 'Montserrat', sans-serif; font-size: 1rem; text-transform: uppercase; letter-spacing: 2px; color: var(--accent-gold); border-bottom: 2px solid var(--border-line); padding-bottom: 10px; margin-bottom: 30px; }
 
         /* FOOTER */
-        footer { text-align: center; padding: 40px; font-size: 0.75rem; color: var(--text-charcoal); background-color: #f4f2ed; border-top: 1px solid var(--border-line); position: relative; z-index: 10; }
+        footer { text-align: center; padding: 60px; font-size: 0.85rem; color: var(--text-charcoal); background-color: #f4f2ed; border-top: 1px solid var(--border-line); position: relative; }
 
         /* Responsive */
         @media (max-width: 900px) {
             .hero-split-container { grid-template-columns: 1fr; gap: 40px; }
-            .hero-bio-col { position: relative; top: 0; border-bottom: 1px dashed var(--border-line); padding-bottom: 30px; }
+            .hero-bio-col { position: relative; top: 0; border-bottom: 1px dashed var(--border-line); padding-bottom: 40px; }
             .journey-columns { column-count: 1; }
             .mentors-grid { grid-template-columns: 1fr; }
             .series-header { flex-direction: column; align-items: flex-start; gap: 5px; }
-            .series-date { width: auto; font-size: 0.7rem; color: var(--accent-gold); }
-            .series-content { padding: 15px 15px; }
+            .series-date { width: auto; font-size: 0.75rem; color: var(--accent-gold); }
+            .series-content { padding: 15px 20px; }
         }
     </style>
 </head>
@@ -379,6 +371,12 @@
         </div>
 
     </section>
+
+    <div id="experience" class="section-banner bg-experience">
+        <div class="banner-overlay">
+            <h2 class="banner-title">Experience</h2>
+        </div>
+    </div>
 
 
     <div id="experience" class="section-banner bg-experience">
